--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,10 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+
+# Python virtual environment
+venv/
+
+# SQLite database
+db.sqlite3
