Update .gitignore and add package-lock.json for dependency management

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ media/
 # =====================
 # Node / React
 # =====================
-frontend/node_modules/
+node_modules/
 frontend/dist/
 
 # =====================
