--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,27 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.19",
+    "firebase": "^10.7.2",
+    "lucide-react": "^0.468.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.1.3",
-    "@tanstack/react-query": "^5.62.11",
-    "zustand": "^5.0.2",
-    "lucide-react": "^0.468.0",
-    "firebase": "^10.7.2"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "^7.2.4",
-    "typescript": "^5.7.3",
+    "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49"
+    "typescript": "^5.7.3",
+    "vite": "^7.2.4"
   }
 }
