--- a/frontend/.env
+++ b/frontend/.env
@@ -5,3 +5,4 @@ VITE_FIREBASE_STORAGE_BUCKET=hackaton-b70fc.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=133209721933
 VITE_FIREBASE_APP_ID=1:133209721933:web:cfa9181426dc0d079fe004
 VITE_FIREBASE_MEASUREMENT_ID=G-X7WLWL8SH4
+VITE_API_BASE_URL=http://127.0.0.1:8000/api
